# conv.pupbrained.xyz

./: .envrc  .gitignore  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: ia9rakg5is5jfks98whykpzhf1l553hc-source  xym5pw3cwn6s0hrq4js78z7sp745i18h-source
backend/: Cargo.toml  rustfmt.toml
backend/src/: main.rs
frontend/: bun.lockb  eslint.config.js  farm.config.ts  index.html  package.json  tsconfig.json  unocss.config.ts  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts  style.css
frontend/src/components/: HelloWorld.vue
