[package]
name = "conv-bin"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
actix-web = "4.8.0"
actix-multipart = "0.6.2"
actix-cors = "0.7.0"
actix-files = "0.6.6"
serde = { version = "1.0.203", features = ["derive"] }
mime = "0.3.17"
jpeg-encoder = "0.6.0"
png = "0.17.13"
jpeg-decoder = "0.3.1"
image-webp = "0.1.2"
