[package]
name = "conv-bin"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-multipart = "0.6.2"
actix-web = "4.8.0"
image-webp = "0.1.2"
jpegxl-rs = { version = "0.10.3", default-features = false, features = ["vendored"] }
mime = "0.3.17"
mozjpeg = "0.10.7"
png = "0.17.13"
serde = { version = "1.0.203", features = ["derive"] }
