[package]
name = "conv-bin"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-multipart = "0.6.2"
actix-web = "4.8.0"
anyhow = "1.0.86"
aom-decode = "0.2.9"
image-webp = "0.1.2"
mime = "0.3.17"
mozjpeg = "0.10.7"
num_cpus = "1.16.0"
png = "0.17.13"
ravif = "0.11.7"
rgb = "0.8.40"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
